2012-04-09  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: mkvextract will no longer abort extracing
	h.264 tracks if it encounters a NAL smaller than its size
	field. Instead it will warn about it and drop the NAL.

2012-04-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Writing more than two parts into the same
	file with "--split parts:" resulted in the timecodes of the third
	and all following parts to be wrong. Fixes ticket 740.

	* mkvmerge: bug fix: The "--split parts:" functionality was
	not taking dropped ranges into account when calculating the
	segment duration for files that more than one range was written
	to. Fixes ticket 738.

	* mkvmerge: bug fix: The "--split parts:" functionality was
	producing a small gap between the first part's last packet's
	timecode and the second part's first packet's timecode if two
	parts are written to the same file. Fixes ticket 742.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The "--split parts:" functionality was
	writing a superfluous and empty first part if the first range
	starts at 00:00:00. Fixes ticket 737.

2012-04-07  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, build system: Fixed building with wxWidgets 2.9.3.

2012-04-06  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.5.0.

	* Build system: Boost's "lexical_cast" and "type traits" libraries
	are now required.

	* mmg: new feature: Added GUI controls for mkvmerge's "file
	concatenation" feature as "additional file parts". The user can
	chose which individual files are treated as if they were a single
	huge source file.

	* mkvmerge: bug fix: The handling of the "do not read other files"
	options (e.g. "=file.vob" and "( file.vob )") was broken for MPEG
	program stream files.

2012-04-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed a wrong assertion about minimum MPEG
	1/2 video start code lengths. Fixes ticket 728.

2012-03-31  Moritz Bunkus  <moritz@bunkus.org>
